Font rendering problems #40144

Closed
opened 2014-05-11 17:47:57 +02:00 by Christian Elsässer · 11 comments

System Information
Windows 8

Blender Version
Broken: 2.70a

Short description of error
When using the text object with an external font the display of the font sometimes is wrong (though the font works fine in gimp etc.). I found this error with several fonts - but can't remember all them any more. But for example there are errors when using the exo2 font. http://www.google.com/fonts/specimen/Exo+2

Here's a screenshot of the alphabet using the exo2 light font: bugreport.jpg

Exact steps for others to reproduce the error
download exo2 font from google
add a text object in 3d view
go to the font panel
select the downloaded exo2 thin font (all exo fonts are display with errors, but thin gives the worst results)

**System Information** Windows 8 **Blender Version** Broken: 2.70a **Short description of error** When using the text object with an external font the display of the font sometimes is wrong (though the font works fine in gimp etc.). I found this error with several fonts - but can't remember all them any more. But for example there are errors when using the exo2 font. http://www.google.com/fonts/specimen/Exo+2 Here's a screenshot of the alphabet using the exo2 light font: ![bugreport.jpg](https://archive.blender.org/developer/F88478/bugreport.jpg) **Exact steps for others to reproduce the error** download exo2 font from google add a text object in 3d view go to the font panel select the downloaded exo2 thin font (all exo fonts are display with errors, but thin gives the worst results)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ChristianElsasser

Added subscriber: @ChristianElsasser
Sergey Sharybin was assigned by Bastien Montagne 2014-05-11 18:50:06 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Pretty sure this is not considered a bug (we simply cannot handle all kind of fonts nicely), but will let Sergey decide here! :)

Pretty sure this is not considered a bug (we simply cannot handle all kind of fonts nicely), but will let Sergey decide here! :)

This issue was referenced by blender/blender-addons-contrib@5db81a0695

This issue was referenced by blender/blender-addons-contrib@5db81a0695e5e2c34a3d970a97c241cb08c4f0e1

This issue was referenced by 5db81a0695

This issue was referenced by 5db81a0695e5e2c34a3d970a97c241cb08c4f0e1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5db81a0695.

Closed by commit 5db81a0695.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Good find Christian!

This was indeed an error in our code, surprising nobody noticed it for 11 years??? (dates back to 2003)

Checked freetype docs and we weren't wrapping the check for FT_Curve_Tag_Conic on both start and end points.

Probably this isn't noticeable on fonts with a high density of control points.

the font renders correctly now.

Good find Christian! This was indeed an error in our code, surprising nobody noticed it for 11 years??? (dates back to 2003) Checked freetype docs and we weren't wrapping the check for `FT_Curve_Tag_Conic` on both start and end points. Probably this isn't noticeable on fonts with a high density of control points. the font renders correctly now.

Thanks for the fast reply and fix! :) you guys are doing a great job developing blender!

Thanks for the fast reply and fix! :) you guys are doing a great job developing blender!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40144
No description provided.