Fix T40144: Font rendering problems